--- a/doc/文档对象接口.md
+++ b/doc/文档对象接口.md
@@ -29,6 +29,38 @@ curl "http://localhost:4082/api/admin/document/list?db=test2&cl=dialog_script&pa
 curl "http://localhost:4082/api/mongo/document/list?db=test2&cl=dialog_script&page=1&size=100"
 ```
 
+字段类型是字符串数组，要求包含指定的值。
+
+```shell
+curl 'http://localhost:3020/api/admin/document/list?db=db_5gm_matter&cl=titles&page=1&size=100' \
+  -H 'Accept: application/json, text/plain, */*' \
+  -H 'Authorization: Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6InVzZXIxIiwiZGF0YSI6eyJpZCI6MSwidXNlcm5hbWUiOiJ1c2VyMSIsInBhc3N3b3JkIjoidXNlcjEiLCJpc0FkbWluIjp0cnVlLCJhbGxvd011bHRpTG9naW4iOnRydWV9LCJpc0FkbWluIjp0cnVlLCJhbGxvd011bHRpTG9naW4iOnRydWUsImlhdCI6MTY1NjQxODUwNywiZXhwIjoxNjU2NDIyMTA3fQ.VdUABqQ8SjB_nMHmnu5xduXVV8s8ZDMG5KJkiSfPzkw' \
+  -H 'Content-Type: application/json' \
+  --data-raw '{"filter":{"intents":{"feature":"all", "keyword":["代码示例"]}},"orderBy":{}}'
+```
+
+字段类型是对象数组，要求包含指定的值。
+
+包含任意1个
+
+```shell
+curl 'http://localhost:3020/api/admin/document/list?db=db_5gm_matter&cl=titles&page=1&size=100' \
+  -H 'Accept: application/json, text/plain, */*' \
+  -H 'Authorization: Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6InVzZXIxIiwiZGF0YSI6eyJpZCI6MSwidXNlcm5hbWUiOiJ1c2VyMSIsInBhc3N3b3JkIjoidXNlcjEiLCJpc0FkbWluIjp0cnVlLCJhbGxvd011bHRpTG9naW4iOnRydWV9LCJpc0FkbWluIjp0cnVlLCJhbGxvd011bHRpTG9naW4iOnRydWUsImlhdCI6MTY1NjQxODUwNywiZXhwIjoxNjU2NDIyMTA3fQ.VdUABqQ8SjB_nMHmnu5xduXVV8s8ZDMG5KJkiSfPzkw' \
+  -H 'Content-Type: application/json' \
+  --data-raw '{"filter":{"slots":{"feature":"all", "keyword":[{"name":"programlang","value":"java"}]}},"orderBy":{}}'
+```
+
+包含多个
+
+```shell
+curl 'http://localhost:3020/api/admin/document/list?db=db_5gm_matter&cl=titles&page=1&size=100' \
+  -H 'Accept: application/json, text/plain, */*' \
+  -H 'Authorization: Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6InVzZXIxIiwiZGF0YSI6eyJpZCI6MSwidXNlcm5hbWUiOiJ1c2VyMSIsInBhc3N3b3JkIjoidXNlcjEiLCJpc0FkbWluIjp0cnVlLCJhbGxvd011bHRpTG9naW4iOnRydWV9LCJpc0FkbWluIjp0cnVlLCJhbGxvd011bHRpTG9naW4iOnRydWUsImlhdCI6MTY1NjQxODUwNywiZXhwIjoxNjU2NDIyMTA3fQ.VdUABqQ8SjB_nMHmnu5xduXVV8s8ZDMG5KJkiSfPzkw' \
+  -H 'Content-Type: application/json' \
+  --data-raw '{"filter":{"slots":{"feature":"all", "keyword":[{"name":"programlang","value":"java"},{"name":"case","value":"上传文件"}]}},"orderBy":{}}'
+```
+
 ## 获取集合下的文档
 
 > POST /admin/document/list
