ue_admin2添加对插件的支持

--- a/docs/插件机制2.md
+++ b/docs/插件机制2.md
@@ -58,7 +58,7 @@
 
 ```js
 module.exports = {
-  dir: 'plugins' // 存放插件的目录，绝对路径，或，启动位置相对路径
+  dir: 'plugins', // 存放插件的目录，绝对路径，或，启动位置相对路径
 }
 ```
 
@@ -87,6 +87,7 @@ module.exports = {
 | beforeWidget                     | 调用前执行的前端插件，用于输入条件。 | object   | 否   |
 | beforeWidget.name                | 组件名称。                           | string   | 是   |
 | beforeWidget.remoteWidgetOptions | 通过接口获取前置条件                 | boolean  | 否   |
+| disabled                         |                                      |          |      |
 
 `scope`支持如下取值：
 
@@ -172,7 +173,7 @@ class MyPlugin extends PluginHttpSendDocs {
   get visible() {
     return {
       key: '',
-      value: ''
+      value: '',
     }
   }
   get title() {
@@ -191,7 +192,7 @@ class MyPlugin extends PluginHttpSendDocs {
     return 'http://localhost:3000/api/plugins/list?scope=document'
   }
   async execute(ctrl, tmwCl) {
-    return await this.httpSend(ctrl, tmwCl).then(repData => {
+    return await this.httpSend(ctrl, tmwCl).then((repData) => {
       return 'ok'
     })
   }
