--- a/docs/环境变量.md
+++ b/docs/环境变量.md
@@ -2,7 +2,17 @@
 
 | 环境变量                   | 用途                     | 默认值                     |
 | -------------------------- | ------------------------ | -------------------------- |
-| **应用**                   |                          |                            |
+| **应用（app.js）**         |                          |                            |
+| TMW_APP_NAME               | 后端服务名称。           | tms-mongodb-web            |
+| TMW_APP_PORT               | 后端服务端口 。          | 3000                       |
+| TMW_APP_ROUTER_AUTH        | 后端服务认证接口前缀。   | auth                       |
+| TMW_APP_ROUTER_CONTROLLER  | 后端服务控制器接口前缀。 | api                        |
+| TMW_APP_ROUTER_PLUGIN      |                          | plugin                     |
+| TMW_APP_ROUTER_FSDOMAIN    |                          | fs                         |
+| TMW_APP_DEFAULT_CREATETIME |                          | TMS_DEFAULT_CREATE_TIME    |
+| TMW_APP_DEFAULT_UPDATETIME |                          | TMS_APP_DEFAULT_UPDATETIME |
+| TMW_APP_DATA_ACTION_LOG    |                          | TMS_APP_DATA_ACTION_LOG    |
+| --                         |                          |                            |
 | TMS_APP_NAME               |                          | tms-mongodb-web            |
 | TMS_APP_PORT               | 后端服务端口 。          | 3000                       |
 | TMS_APP_ROUTER_AUTH        | 后端服务认证接口前缀。   | auth                       |
@@ -12,14 +22,21 @@
 | TMS_APP_DEFAULT_CREATETIME |                          | TMS_DEFAULT_CREATE_TIME    |
 | TMS_APP_DEFAULT_UPDATETIME |                          | TMS_APP_DEFAULT_UPDATETIME |
 | TMS_APP_DATA_ACTION_LOG    |                          | TMS_APP_DATA_ACTION_LOG    |
-| **log4js**                 |                          |                            |
-| TMS_APP_LOG4JS_LEVEL       |                          | debug                      |
+| **r 日志（log4js.js）**    |                          |                            |
+| TMW_APP_LOG4JS_LEVEL       |                          | debug                      |
 | **mongodb**                |                          |                            |
+| TMW_MONGODB_HOST           | mongodb 数据库连接地址。 | host.docker.internal       |
+| TMW_MONGODB_PORT           |                          | 27017                      |
+| TMW_MONGODB_USER           |                          | root                       |
+| TMW_MONGODB_PASSWORD       |                          | root                       |
+| --                         |                          |                            |
 | TMS_MONGODB_HOST           |                          | host.docker.internal       |
 | TMS_MONGODB_PORT           |                          | 27017                      |
 | TMS_MONGODB_USER           |                          | root                       |
 | TMS_MONGODB_PASSWORD       |                          | root                       |
 | TMW_REALTIME_REPLICA       |                          |                            |
+| **fs**                     |                          |                            |
+| TMW_FINDER_FS_CUSTOMNAME   |                          |                            |
 | **redis**                  |                          |                            |
 | TMS_REDIS_DISABLED         |                          | yes                        |
 | TMS_REDIS_PREFIX           |                          |                            |
