优化单体docker镜像

--- a/docs/环境变量.md
+++ b/docs/环境变量.md
@@ -35,9 +35,9 @@
 | ----------------------- | -------------------------------------------------- | --------------- |
 | VITE_BASE_URL           | 页面起始地址，指定为空不生效。在构造镜像阶段有效。 | /admin          |
 | --                      |                                                    |                 |
-| VITE_AUTH_API_BASE      | 认证服务起始路径。                                 | 无              |
+| VITE_AUTH_API_BASE      | 认证服务起始路径。                                 | api             |
 | VITE_AUTH_API_PORT      | 认证服务端口。                                     | 无              |
-| VITE_BACK_API_BASE      | 后端服务起始路径。                                 | 无              |
+| VITE_BACK_API_BASE      | 后端服务起始路径。                                 | auth            |
 | VITE_BACK_API_PORT      | 后端服务端口。                                     | 无              |
 | --                      |                                                    |                 |
 | VITE_LOGIN_CODE_APPID   | 调用验证码、注册、登录等接口时传递参数。           | tms-mongodb-web |
