--- a/docs/环境变量.md
+++ b/docs/环境变量.md
@@ -1,33 +1,36 @@
 # back
 
-| 环境变量                   | 用途                     | 默认值                     |
-| -------------------------- | ------------------------ | -------------------------- |
-| **应用（app.js）**         |                          |                            |
-| TMW_APP_NAME               | 后端服务名称。           | tms-mongodb-web            |
-| TMW_APP_PORT               | 后端服务端口 。          | 3000                       |
-| TMW_APP_ROUTER_AUTH        | 后端服务认证接口前缀。   | auth                       |
-| TMW_APP_ROUTER_CONTROLLER  | 后端服务控制器接口前缀。 | api                        |
-| TMW_APP_ROUTER_PLUGIN      |                          | plugin                     |
-| TMW_APP_ROUTER_FSDOMAIN    |                          | fs                         |
-| TMW_APP_DEFAULT_CREATETIME |                          | TMS_DEFAULT_CREATE_TIME    |
-| TMW_APP_DEFAULT_UPDATETIME |                          | TMS_APP_DEFAULT_UPDATETIME |
-| TMW_APP_DATA_ACTION_LOG    |                          | TMS_APP_DATA_ACTION_LOG    |
-| **r 日志（log4js.js）**    |                          |                            |
-| TMW_APP_LOG4JS_LEVEL       |                          | debug                      |
-| **mongodb**                |                          |                            |
-| TMW_MONGODB_HOST           | mongodb 数据库连接地址。 | host.docker.internal       |
-| TMW_MONGODB_PORT           |                          | 27017                      |
-| TMW_MONGODB_USER           |                          | root                       |
-| TMW_MONGODB_PASSWORD       |                          | root                       |
-| **fs**                     |                          |                            |
-| TMW_FINDER_FS_CUSTOMNAME   |                          |                            |
-| **redis**                  |                          |                            |
-| TMS_REDIS_DISABLED         |                          | yes                        |
-| TMS_REDIS_PREFIX           |                          |                            |
-| TMS_REDIS_HOST             |                          |                            |
-| TMS_REDIS_PORT             |                          |                            |
-| TMS_REDIS_PWD              |                          |                            |
-| TMS_REDIS_EXPIRESIN        |                          |                            |
+| 环境变量                      | 用途                                                        | 默认值                     |
+| ----------------------------- | ----------------------------------------------------------- | -------------------------- |
+| **应用（app.js）**            |                                                             |                            |
+| TMW_APP_NAME                  | 后端服务名称。                                              | tms-mongodb-web            |
+| TMW_APP_PORT                  | 后端服务端口 。                                             | 3000                       |
+| TMW_APP_ROUTER_AUTH           | 后端服务认证接口前缀。                                      | auth                       |
+| TMW_APP_ROUTER_CONTROLLER     | 后端服务控制器接口前缀。                                    | api                        |
+| TMW_APP_ROUTER_PLUGIN         |                                                             | plugin                     |
+| TMW_APP_ROUTER_FSDOMAIN       |                                                             | fs                         |
+| TMW_APP_AUTH_JWT_KEY          | JWT 认证方式的服务端私有密钥。                              |                            |
+| TMW_APP_AUTH_CAPTCHA_DISABLED | 是否关闭验证码功能，值为`true`或`yes`时关闭，不区分大小写。 |                            |
+| ----                          |                                                             |                            |
+| TMW_APP_DEFAULT_CREATETIME    |                                                             | TMS_DEFAULT_CREATE_TIME    |
+| TMW_APP_DEFAULT_UPDATETIME    |                                                             | TMS_APP_DEFAULT_UPDATETIME |
+| TMW_APP_DATA_ACTION_LOG       |                                                             | TMS_APP_DATA_ACTION_LOG    |
+| **日志（log4js.js）**         |                                                             |                            |
+| TMW_APP_LOG4JS_LEVEL          |                                                             | debug                      |
+| **mongodb**                   |                                                             |                            |
+| TMW_MONGODB_HOST              | mongodb 数据库连接地址。                                    | host.docker.internal       |
+| TMW_MONGODB_PORT              |                                                             | 27017                      |
+| TMW_MONGODB_USER              |                                                             | root                       |
+| TMW_MONGODB_PASSWORD          |                                                             | root                       |
+| **fs**                        |                                                             |                            |
+| TMW_FINDER_FS_CUSTOMNAME      |                                                             |                            |
+| **redis**                     |                                                             |                            |
+| TMS_REDIS_DISABLED            |                                                             | yes                        |
+| TMS_REDIS_PREFIX              |                                                             |                            |
+| TMS_REDIS_HOST                |                                                             |                            |
+| TMS_REDIS_PORT                |                                                             |                            |
+| TMS_REDIS_PWD                 |                                                             |                            |
+| TMS_REDIS_EXPIRESIN           |                                                             |                            |
 
 # ue_admin
 
