优化单体docker镜像

--- a/docs/环境变量.md
+++ b/docs/环境变量.md
@@ -34,19 +34,20 @@
 
 # ue_admin
 
-| 环境变量                | 用途                                               | 默认值          |
-| ----------------------- | -------------------------------------------------- | --------------- |
-| VITE_BASE_URL           | 页面起始地址，指定为空不生效。在构造镜像阶段有效。 | /admin          |
-| --                      |                                                    |                 |
-| VITE_AUTH_API_BASE      | 认证服务起始路径。                                 | api             |
-| VITE_AUTH_API_PORT      | 认证服务端口。                                     | 无              |
-| VITE_BACK_API_BASE      | 后端服务起始路径。                                 | auth            |
-| VITE_BACK_API_PORT      | 后端服务端口。                                     | 无              |
-| --                      |                                                    |                 |
-| VITE_LOGIN_CODE_APPID   | 调用验证码、注册、登录等接口时传递参数。           | tms-mongodb-web |
-| VITE_ENCRYPT_SECRET     | 是否对传递登录密码进行加密。需要服务端配合。       | no              |
-| --                      |                                                    |                 |
-| NGINX_UE_ADMIN_BASE_URL | 与`VITE_BASE_URL`对应，在运行容器阶段有效。        | /admin          |
-| NGINX_BACK_BASE_URL     | nginx 代理前端页面请求的后端服务地址。             | 127.0.0.1:3000  |
+| 环境变量                    | 用途                                               | 默认值          |
+| --------------------------- | -------------------------------------------------- | --------------- |
+| VITE_BASE_URL               | 页面起始地址，指定为空不生效。在构造镜像阶段有效。 | /admin          |
+| --                          |                                                    |                 |
+| VITE_AUTH_API_BASE          | 认证服务起始路径。                                 | api             |
+| VITE_AUTH_API_PORT          | 认证服务端口。                                     | 无              |
+| VITE_BACK_API_BASE          | 后端服务起始路径。                                 | auth            |
+| VITE_BACK_API_PORT          | 后端服务端口。                                     | 无              |
+| --                          |                                                    |                 |
+| VITE_LOGIN_CODE_APPID       | 调用验证码、注册、登录等接口时传递参数。           | tms-mongodb-web |
+| VITE_LOGIN_CAPTCHA_DISABLED | 登录界面关闭验证码，`yes`或`true`不区分大小写。    | 打开            |
+| VITE_ENCRYPT_SECRET         | 是否对传递登录密码进行加密。需要服务端配合。       | no              |
+| --                          |                                                    |                 |
+| NGINX_UE_ADMIN_BASE_URL     | 与`VITE_BASE_URL`对应，在运行容器阶段有效。        | /admin          |
+| NGINX_BACK_BASE_URL         | nginx 代理前端页面请求的后端服务地址。             | 127.0.0.1:3000  |
 
 如果`VITE_BACK_AUTH_BASE`和`VITE_BACK_API_BASE`以`http`开头，那么直接使用该值作为服务地址；否则，以当前页面访问地址为基础，如果指定了`XXX_PORT`，那么用指定的端口替换页面访问地址端口，之后添加`XXX_BASE`作为调用 AP 的起始地址。
