--- a/docs/环境变量.md
+++ b/docs/环境变量.md
@@ -15,6 +15,8 @@
 | TMW_APP_DEFAULT_CREATETIME    |                                                             | TMS_DEFAULT_CREATE_TIME    |
 | TMW_APP_DEFAULT_UPDATETIME    |                                                             | TMS_APP_DEFAULT_UPDATETIME |
 | TMW_APP_DATA_ACTION_LOG       |                                                             | TMS_APP_DATA_ACTION_LOG    |
+| **插件（plugin.js）**         |                                                             |                            |
+| TMW_APP_PLUGIN_DIR            | 插件文件目录。                                              |                            |
 | **日志（log4js.js）**         |                                                             |                            |
 | TMW_APP_LOG4JS_LEVEL          |                                                             | debug                      |
 | **mongodb**                   |                                                             |                            |
