--- a/docs/环境变量.md
+++ b/docs/环境变量.md
@@ -16,7 +16,7 @@
 | TMW_APP_DEFAULT_UPDATETIME    |                                                             | TMS_APP_DEFAULT_UPDATETIME |
 | TMW_APP_DATA_ACTION_LOG       |                                                             | TMS_APP_DATA_ACTION_LOG    |
 | **插件（plugin.js）**         |                                                             |                            |
-| TMW_APP_PLUGIN_DIR            | 插件文件目录。                                              |                            |
+| TMW_APP_PLUGIN_DIR            | 指定插件文件目录。如果有多个目录用半角逗号分隔。            |                            |
 | **日志（log4js.js）**         |                                                             |                            |
 | TMW_APP_LOG4JS_LEVEL          |                                                             | debug                      |
 | **mongodb**                   |                                                             |                            |
