--- a/docs/环境变量.md
+++ b/docs/环境变量.md
@@ -9,7 +9,8 @@
 | TMW_APP_ROUTER_CONTROLLER     | 后端服务控制器接口前缀。                                    | api                        |
 | TMW_APP_ROUTER_PLUGIN         |                                                             | plugin                     |
 | TMW_APP_ROUTER_FSDOMAIN       |                                                             | fs                         |
-| TMW_APP_AUTH_JWT_KEY          | JWT 认证方式的服务端私有密钥。                              |                            |
+| TMW_APP_AUTH_JWT_KEY          | JWT 认证方式的服务端私有密钥。                              | 随机值                     |
+| TMW_APP_AUTH_JWT_EXPIRESIN    | JWT 认证方式的服务端 token 有效期。                         | 3600                       |
 | TMW_APP_AUTH_CAPTCHA_DISABLED | 是否关闭验证码功能，值为`true`或`yes`时关闭，不区分大小写。 |                            |
 | ----                          |                                                             |                            |
 | TMW_APP_DEFAULT_CREATETIME    |                                                             | TMS_DEFAULT_CREATE_TIME    |
