插件http-send-doc支持前端部件输入参数

--- a/docs/插件机制.md
+++ b/docs/插件机制.md
@@ -62,6 +62,8 @@ module.exports = {
 }
 ```
 
+系统内部采用`glob`库查找文件，所以查找路径可以按照`glob`的规则设置。支持用逗号分隔多条规则。
+
 ## 插件属性
 
 插件必须是`.js`结尾的文件，必须放在配置文件指定的目录中。
@@ -166,6 +168,9 @@ const { PluginHttpSendDocs } = require('../models/plugin')
  * @extends PluginHttpSendDocs
  */
 class MyPlugin extends PluginHttpSendDocs {
+  constructor(file) {
+    super(file)
+  }
   get name() {
     return 'myplugin'
   }
@@ -197,7 +202,7 @@ class MyPlugin extends PluginHttpSendDocs {
     return 'http://localhost:3000/api/plugins/list?scope=document'
   }
   async execute(ctrl, tmwCl) {
-    return await this.httpSend(ctrl, tmwCl).then((repData) =>
+    return await this.httpSend(ctrl, tmwCl).then((repData) => {
       return 'ok'
     })
   }
