--- a/docs/环境变量.md
+++ b/docs/环境变量.md
@@ -60,3 +60,11 @@
 VITE_STORETOKEN_WAY
 
 VITE_SCHEMA_TAGS
+
+# plugins
+
+| 环境变量                      | 用途                       | 默认值 |
+| ----------------------------- | -------------------------- | ------ |
+| **document**                  | 文档处理插件               |        |
+| **http-send**                 | 发送文档到指定位置插件     |        |
+| TMW_PLUGIN_DOCUMENT_HTTP_SEND | 指定插件前端部件加载位置。 | 无     |
