优化插件机制

--- a/docs/插件机制.md
+++ b/docs/插件机制.md
@@ -2,37 +2,56 @@
 
 插件用于扩展系统的功能。系统提供了基础的增删改查操作，但是很多时候需要对数据进行更复杂的处理，例如：对集合中符合条件的文档中某一列，根据外部接口的查询结果进行填写。这些依赖于特定的业务场景的功能，就需要放在插件中实现。
 
-每个插件都有确定的适用对象，包括：数据库，集合，文档。和`TMW`的基础功能配合，插件出现在数据库列表，集合列表和文档列表页中，提供给用户使用。
+每个插件都有确定的适用对象类型，包括：数据库，集合，文档。和`TMW`的基础功能配合，插件出现在数据库列表，集合列表和文档列表页中，提供给用户使用。
 
 每个插件接收用户指定的输入参数，例如：一组文档的 id 或筛选条件等，执行内部逻辑，反馈执行结果。
 
-有时，除了需要用户指定要处理的管理对象，插件还需要用户提供额外的参数，这类问题通过部件（Widget）解决。部件就是可以独立完成某种业务逻辑的交互组件，例如：选择集合，选择某些文档等。
+有时，除了需要用户指定要处理的管理对象，插件还需要用户提供额外的参数，这类问题通过前端部件（Widget）解决。前端部件就是可以独立完成某种业务逻辑的交互组件，例如：选择集合，选择某些文档等。
 
 插件的执行分为如下步骤：
 
-1. 通过插件管理接口获得当前管理页面适用的插件；
-2. 用户触发一个要执行的插件；
-3. 如果插件指定需要调用前端部件（Widget）收集其它输入条件，并指定需要后端提供打开部件的配置参数，那么调用插件获得部件配置参数接口获得参数；
-4. 系统打开插件指定的部件；
-5. 返回用户在部件中指定的参数；
-6. 将用户在管理页面上指定的参数和在部件中指定的参数传递给插件，指定插件功能；
-7. 插件执行完成后，将执行结果反馈给管理页面。
+```mermaid
+sequenceDiagram
+autonumber
+
+back->>back: 服务端启动时加载所有插件
+ue->>back: 请求可用插件
+back-->>ue: 返回匹配的插件列表
+ue->>ue_plugin: 打开插件部件
+ue_plugin->>ue_plugin: 收集用户输入
+ue_plugin-->>ue: 返回用户输入
+ue->>back: 执行插件操作
+back->>plugin: 执行插件操作
+plugin-->>back: 返回执行结果
+back-->>ue: 返回执行结果
+ue-->>ue_plugin: 传递执行结果
+ue_plugin->>ue_plugin: 显示执行结果
+ue_plugin->>ue_plugin: 关闭插件
+```
 
 # 设计考虑
 
 ## 获得插件
 
-通过接口`plugins/list?scope=?`获得可用插件。`scope`的取值包括：database，collection 和 document。
+通过接口`plugins/list?scope=?`获得可用插件。`scope`的取值包括：`database`，`collection`和`document`。还包括基础参数数据库名称`db`和集合名称`cl`。
 
 ## 控制插件可见
+
+定义插件时包含`dbName`，`clName`属性，类型时正则表达式，系统会根据传入的数据库名称和集合名称进行匹配。
 
 有时候，插件只能适用于或者不能适用于某一类管理对象，这类问题通过标签解决。系统支持给集合打标签，插件也支持设置标签，在获取适用插件时，系统会根据标签的匹配情况进行筛选。
 
 ## 定制用户输入参数
 
+### 内置部件
+
 插件指定要使用的部件，并且说明是否给部件提供参数。部件是一种可复用的业务级组件，它们有一致的打开方式和参数返回方式。
 
 如果需要由插件指定打开部件的参数，例如：只选择状态符合指定值的记录，调用接口`plugins/remoteWidgetOptions`。
+
+### 自定义部件
+
+系统支持自定义插件部件。在执行插件的页面通过`iframe`调用插件部件的地址，插件收集的用户输入通过`postMessage`返回给插件调用页面。
 
 ## 关闭基本操作
 
@@ -81,6 +100,9 @@ module.exports = {
 | disabled                         | 是否停用插件                         | boolean  | 否   |
 | transData                        | 传输数据量                           | string   | 否   |
 | visible                          | 是否显示插件                         | object   | 否   |
+| bucketName                       | 存储空间名称匹配规则                 | RegExp   | 否   |
+| dbName                           | 数据库名称匹配规则                   | RegExp   | 否   |
+| clName                           | 集合名称匹配规则                     | RegExp   | 否   |
 | **标签设置**                     |                                      |          |      |
 | excludeTags                      | 管理对象中不允许包含的标签的名称数组 | string[] | 否   |
 | everyTags                        | 管理对象中必须包含所有标签的名称数据 | string[] | 否   |
@@ -88,21 +110,25 @@ module.exports = {
 | **部件设置**                     |                                      |          |      |
 | beforeWidget                     | 调用前执行的前端插件，用于输入条件。 | object   | 否   |
 | beforeWidget.name                | 组件名称。                           | string   | 是   |
-| beforeWidget.remoteWidgetOptions | 通过接口获取前置条件                 | boolean  | 否   |
+| beforeWidget.remoteWidgetOptions | 需要通过接口获取插件部件执行参数。   | boolean  | 否   |
+| remoteWidgetOptions              | 生成插件部件参数的方法。             | Function | 否   |
 | disabled                         |                                      |          |      |
 
 `scope`支持如下取值：
 
+| 取值       | 说明   |
+| ---------- | ------ |
+| database   | 数据库 |
+| collection | 数据库 |
+| document   | 数据库 |
+
+`sctransDataope`支持如下取值：
+
 | 取值    | 说明 |
 | ------- | ---- |
 | nothing |      |
+| more    |      |
 | one     |      |
-
-`transData`支持如下取值：
-
-| 取值     | 说明   |
-| -------- | ------ |
-| database | 数据库 |
 
 系统内置了可以和插件配合的前端组件
 
@@ -113,14 +139,13 @@ module.exports = {
 | DialogSelectDocument   | 选择文档作为参数。执行插件前打开一个文档选择对话框，由用户指定数据库和集合，选择多条文档作为参数传递给插件。 |
 | DialogSchemaForm       | 通用动态表单。                                                                                               |
 | DialogSelectCollection | 选择数据库和集合。                                                                                           |
-
-`beforeWidget.remoteWidgetOptions`支持如下取值：
-
-参考`document/list`接口定义。
+| external               | 使用外置插件部件。                                                                                           |
 
 ## 插件方法
 
 每个插件文件是一个模块，必须导出`createPlugin`方法用于创建插件。创建的插件对象必须提供`execute`方法，用于执行插件逻辑。
+
+`createPlugin`一次可以创建多个插件实例。
 
 ### createPlugin 方法
 
