--- a/docs/环境变量.md
+++ b/docs/环境变量.md
@@ -63,8 +63,17 @@ VITE_SCHEMA_TAGS
 
 # plugins
 
-| 环境变量                      | 用途                       | 默认值 |
-| ----------------------------- | -------------------------- | ------ |
-| **document**                  | 文档处理插件               |        |
-| **http-send**                 | 发送文档到指定位置插件     |        |
-| TMW_PLUGIN_DOCUMENT_HTTP_SEND | 指定插件前端部件加载位置。 | 无     |
+| 环境变量                             | 用途                                             | 默认值                 |
+| ------------------------------------ | ------------------------------------------------ | ---------------------- |
+| **document**                         | 文档处理插件                                     |                        |
+| **http-send**                        | 发送文档到指定位置插件                           |                        |
+| TMW_PLUGIN_DOC_HTTP_SEND_WIDGET_URL  | 指定插件前端部件加载位置。                       | 无                     |
+| TMW_PLUGIN_DOC_HTTP_SEND_CONFIG_NAME | 插件配置文件位置。                               | ./plugin/doc/http-send |
+| TMW_PLUGIN_DOC_HTTP_SEND_NAME        | 插件实例的名称。                                 | doc-http-send          |
+| TMW_PLUGIN_DOC_HTTP_SEND_TITLE       | 插件实例的标题。                                 | 无                     |
+| TMW_PLUGIN_DOC_HTTP_SEND_URL         | HTTP 请求地址。                                  | 无                     |
+| TMW_PLUGIN_DOC_HTTP_SEND_METHOD      | HTTP 请求方法。                                  | 无                     |
+| TMW_PLUGIN_DOC_HTTP_SEND_EXCLUDEID   | 发送的文档数据中是否要清除 id 字段。             | 无                     |
+| TMW_PLUGIN_DOC_HTTP_SEND_BUCKET      | 适用的存储空间的正则表达式。不指定就是全部适用。 | 无                     |
+| TMW_PLUGIN_DOC_HTTP_SEND_DB          | 适用的数据库的正则表达式。不指定就是全部适用。   | 无                     |
+| TMW_PLUGIN_DOC_HTTP_SEND_CL          | 适用的集合的正则表达式。不指定就是全部适用。     | 无                     |
