优化数据初始化工具文档

--- a/docs/数据初始化.md
+++ b/docs/数据初始化.md
@@ -26,7 +26,7 @@ node ./dist/db_init -u xxx -p xxx --file xxx
 
 执行的顺序为`db`，`schema`，`cl`，`docs`。如果前面的数据不满足新建条件，后面的操作不执行。
 
-一个
+一个数据初始化文件中可以包含多条初始化规则，每条规则对应 1 个集合。
 
 ## 示例数据
 
