支持执行调度任务

--- a/docs/插件机制.md
+++ b/docs/插件机制.md
@@ -159,6 +159,27 @@ module.exports = {
 
 系统直接将`execute`方法返回的结果作为响应数据返回。
 
+请求携带的查询参数
+
+```json
+{
+  "bucket": "", // 存储空间
+  "db": "", // 数据库的名称
+  "cl": "", // 集合的名称
+  "plugin": "" // 插件的名称
+}
+```
+
+请求携带的消息体
+
+```json
+{
+  "filter": "", // ALL，或，对象
+  "docIds": [],
+  "widget": {} // 插件部件收集的参数
+}
+```
+
 # 调用插件
 
 | API                         | 说明         | 方法 |
