--- a/docs/数据初始化.md
+++ b/docs/数据初始化.md
@@ -14,7 +14,7 @@ node ./dist/db_init -u xxx -p xxx --file xxx
 | --port             | TMW_MONGODB_PORT               | mongodb 连接端口。                                                                                              | 27017     |
 | --file             | TMW_DB_INIT_DATA_FILE          | 初始化数据文件路径。                                                                                            | 无        |
 | --allowReuseSchema | TMW_DB_INIT_ALLOW_REUSE_SCHEMA | 当存在`title`相同的`schema`时允许继续操作。                                                                     | false     |
-| --docCreateMode    | TMW_DB_INIT_DOC_CREATE_MODE    | 当集合中已经存在文档，处理新建文档的模式，stop：有数据就不执行；override：清除现有数据后新建；merge：直接新建。 | stop      |
+| --doc-create-mode  | TMW_DB_INIT_DOC_CREATE_MODE    | 当集合中已经存在文档，处理新建文档的模式，stop：有数据就不执行；override：清除现有数据后新建；merge：直接新建。 | stop      |
 
 # 数据要求
 
@@ -27,6 +27,19 @@ node ./dist/db_init -u xxx -p xxx --file xxx
 执行的顺序为`db`，`schema`，`cl`，`docs`。如果前面的数据不满足新建条件，后面的操作不执行。
 
 一个数据初始化文件中可以包含多条初始化规则，每条规则对应 1 个集合。
+
+文档对象支持指定`_id`字段，必须符合`ObjectId`的格式要求，12 个字节长的字符串，或 24 个 16 进制字符的字符串。
+
+```js
+const sentence = 'batch_notice'
+
+let id = ''
+for (let i = 0; i < sentence.length; i++) {
+  let hex = sentence.charCodeAt(i).toString(16)
+  id += hex
+}
+console.log(hex) // output: 62617463685f6e6f74696365
+```
 
 ## 示例数据
 
