优化代码功能

--- a/docs/环境变量.md
+++ b/docs/环境变量.md
@@ -1,46 +1,47 @@
 # back
 
-| 环境变量                               | 用途                                                         | 默认值                     |
-| -------------------------------------- | ------------------------------------------------------------ | -------------------------- |
-| **应用（app.js）**                     |                                                              |                            |
-| TMW_APP_NAME                           | 后端服务名称。                                               | tms-mongodb-web            |
-| TMW_APP_PORT                           | 后端服务端口 。                                              | 3000                       |
-| TMW_APP_ROUTER_AUTH                    | 后端服务认证接口前缀。                                       | auth                       |
-| TMW_APP_ROUTER_CONTROLLER              | 后端服务控制器接口前缀。                                     | api                        |
-| TMW_APP_ROUTER_PLUGIN                  |                                                              | plugin                     |
-| TMW_APP_ROUTER_FSDOMAIN                |                                                              | fs                         |
-| TMW_APP_AUTH_JWT_KEY                   | JWT 认证方式的服务端私有密钥。                               | 随机值                     |
-| TMW_APP_AUTH_JWT_EXPIRESIN             | JWT 认证方式的服务端 token 有效期。                          | 3600                       |
-| TMW_APP_AUTH_CAPTCHA_DISABLED          | 是否关闭验证码功能，值为`true`或`yes`时关闭，不区分大小写。  | 开启                       |
-| TMW_APP_AUTH_CAPTCHA_STORAGE           | 验证码存储类型，支持：`redis\lowdb`。                        | lowdb                      |
-| TMW_APP_AUTH_CAPTCHA_REDIS_NAME        | 如果使用`redis`存储验证码，对应的`redis`连接名称。           | master                     |
+| 环境变量                               | 用途                                                              | 默认值                     |
+| -------------------------------------- | ----------------------------------------------------------------- | -------------------------- |
+| **应用（app.js）**                     |                                                                   |                            |
+| TMW_APP_NAME                           | 后端服务名称。                                                    | tms-mongodb-web            |
+| TMW_APP_PORT                           | 后端服务端口 。                                                   | 3000                       |
+| TMW_APP_ROUTER_AUTH                    | 后端服务认证接口前缀。                                            | auth                       |
+| TMW_APP_ROUTER_CONTROLLER              | 后端服务控制器接口前缀。                                          | api                        |
+| TMW_APP_ROUTER_PLUGIN                  |                                                                   | plugin                     |
+| TMW_APP_ROUTER_FSDOMAIN                |                                                                   | fs                         |
+| TMW_APP_AUTH_JWT_KEY                   | JWT 认证方式的服务端私有密钥。                                    | 随机值                     |
+| TMW_APP_AUTH_JWT_EXPIRESIN             | JWT 认证方式的服务端 token 有效期。                               | 3600                       |
+| TMW_APP_AUTH_CAPTCHA_DISABLED          | 是否关闭验证码功能，值为`true`或`yes`时关闭，不区分大小写。       | 开启                       |
+| TMW_APP_AUTH_CAPTCHA_STORAGE           | 验证码存储类型，支持：`redis\lowdb`。                             | lowdb                      |
+| TMW_APP_AUTH_CAPTCHA_REDIS_NAME        | 如果使用`redis`存储验证码，对应的`redis`连接名称。                | master                     |
 | TMW_APP_AUTH_CLIENT_DISABLED           | 是否开启账号管理模块功能，值为`true`或`yes`时关闭，不区分大小写。 | 开启                       |
-| TMW_APP_AUTH_CLIENT_MONGODB_NAME       | 存储账号数据的`mongodb`在`mongodb.js`中的名称。              | master                     |
-| TMW_APP_AUTH_CLIENT_MONGODB_DATABASE   | 存储账号数据的`mongodb`数据库名称。                          | tmw_account                |
-| TMW_APP_AUTH_CLIENT_MONGODB_COLLECTION | 存储账号数据的`mongodb`集合名称。                            | account                    |
-| ----                                   |                                                              |                            |
-| TMW_APP_DEFAULT_CREATETIME             |                                                              | TMS_DEFAULT_CREATE_TIME    |
-| TMW_APP_DEFAULT_UPDATETIME             |                                                              | TMS_APP_DEFAULT_UPDATETIME |
-| TMW_APP_DATA_ACTION_LOG                |                                                              | TMS_APP_DATA_ACTION_LOG    |
-| TMW_APP_BODY_JSON_LIMIT                | 配置JSON文件上传限制大小                                     | 1mb                        |
-| **插件（plugin.js）**                  |                                                              |                            |
-| TMW_APP_PLUGIN_DIR                     | 指定插件文件目录。如果有多个目录用半角逗号分隔。             |                            |
-| **日志（log4js.js）**                  |                                                              |                            |
-| TMW_APP_LOG4JS_LEVEL                   |                                                              | debug                      |
-| **mongodb**                            |                                                              |                            |
-| TMW_MONGODB_HOST                       | mongodb 数据库连接地址。                                     | host.docker.internal       |
-| TMW_MONGODB_PORT                       |                                                              | 27017                      |
-| TMW_MONGODB_USER                       |                                                              | root                       |
-| TMW_MONGODB_PASSWORD                   |                                                              | root                       |
-| **fs**                                 |                                                              |                            |
-| TMW_FINDER_FS_CUSTOMNAME               |                                                              |                            |
-| **redis**                              |                                                              |                            |
-| TMS_REDIS_DISABLED                     |                                                              | yes                        |
-| TMS_REDIS_PREFIX                       |                                                              |                            |
-| TMS_REDIS_HOST                         |                                                              |                            |
-| TMS_REDIS_PORT                         |                                                              |                            |
-| TMS_REDIS_PWD                          |                                                              |                            |
-| TMS_REDIS_EXPIRESIN                    |                                                              |                            |
+| TMW_APP_AUTH_CLIENT_MONGODB_NAME       | 存储账号数据的`mongodb`在`mongodb.js`中的名称。                   | master                     |
+| TMW_APP_AUTH_CLIENT_MONGODB_DATABASE   | 存储账号数据的`mongodb`数据库名称。                               | tmw_account                |
+| TMW_APP_AUTH_CLIENT_MONGODB_COLLECTION | 存储账号数据的`mongodb`集合名称。                                 | account                    |
+| TMW_APP_DATA_CIPHER_KEY                | 数据加密基础 key。                                                |                            |
+| ----                                   |                                                                   |                            |
+| TMW_APP_DEFAULT_CREATETIME             |                                                                   | TMS_DEFAULT_CREATE_TIME    |
+| TMW_APP_DEFAULT_UPDATETIME             |                                                                   | TMS_APP_DEFAULT_UPDATETIME |
+| TMW_APP_DATA_ACTION_LOG                |                                                                   | TMS_APP_DATA_ACTION_LOG    |
+| TMW_APP_BODY_JSON_LIMIT                | 配置 JSON 文件上传限制大小                                        | 1mb                        |
+| **插件（plugin.js）**                  |                                                                   |                            |
+| TMW_APP_PLUGIN_DIR                     | 指定插件文件目录。如果有多个目录用半角逗号分隔。                  |                            |
+| **日志（log4js.js）**                  |                                                                   |                            |
+| TMW_APP_LOG4JS_LEVEL                   |                                                                   | debug                      |
+| **mongodb**                            |                                                                   |                            |
+| TMW_MONGODB_HOST                       | mongodb 数据库连接地址。                                          | host.docker.internal       |
+| TMW_MONGODB_PORT                       |                                                                   | 27017                      |
+| TMW_MONGODB_USER                       |                                                                   | root                       |
+| TMW_MONGODB_PASSWORD                   |                                                                   | root                       |
+| **fs**                                 |                                                                   |                            |
+| TMW_FINDER_FS_CUSTOMNAME               |                                                                   |                            |
+| **redis**                              |                                                                   |                            |
+| TMS_REDIS_DISABLED                     |                                                                   | yes                        |
+| TMS_REDIS_PREFIX                       |                                                                   |                            |
+| TMS_REDIS_HOST                         |                                                                   |                            |
+| TMS_REDIS_PORT                         |                                                                   |                            |
+| TMS_REDIS_PWD                          |                                                                   |                            |
+| TMS_REDIS_EXPIRESIN                    |                                                                   |                            |
 
 # ue_admin
 
@@ -61,20 +62,20 @@
 | --                            |                      |                                                    |                 |
 | NGINX_UE_ADMIN_BASE_URL       |                      | 与`VITE_BASE_URL`对应，在运行容器阶段有效。        | /admin          |
 | NGINX_BACK_BASE_URL           |                      | nginx 代理前端页面请求的后端服务地址。             | 127.0.0.1:3000  |
-| NGINX_UE_PLUGIN_BASE_URL      |                      | nginx代理前端插件部件                              | /plugin         |
-| NGINX_LIMIT_CONN_ZONE         |                      | nginx定义连接基数区域                              | 10m             |
-| NGINX_LIMIT_CONN_CONNIP       |                      | nginx限制每个IP发起的并发连接数                    | 8000            |
-| NGINX_LIMIT_CONN_LOG_LEVEL    |                      | nginx指定当触发limit时，日志打印级别               | error           |
-| NGINX_LIMIT_CONN_STATUS       |                      | nginx设置回复被禁用的连接请求时的状态码            | 503             |
-| NGINX_LIMIT_RATE_AFTER        |                      | nginx设置达到指定阀值后开始限速(字节)              | 300m            |
-| NGINX_LIMIT_RATE              |                      | nginx限制向客户端传输数据的速度(Byte/s)            | 300k            |
-| NGINX_CLIENT_BODY_TIMEOUT     |                      | nginx设置等待client发送一个包体的超时时间          | 60s             |
-| NGINX_CLIENT_HEADER_TIMEOUT   |                      | nginx设置等待client发送一个包头的超时时间          | 60s             |
-| NGINX_KEEPALIVE_TIMEOUT       |                      | keep-alive连接超时时间                             | 75s             |
+| NGINX_UE_PLUGIN_BASE_URL      |                      | nginx 代理前端插件部件                             | /plugin         |
+| NGINX_LIMIT_CONN_ZONE         |                      | nginx 定义连接基数区域                             | 10m             |
+| NGINX_LIMIT_CONN_CONNIP       |                      | nginx 限制每个 IP 发起的并发连接数                 | 8000            |
+| NGINX_LIMIT_CONN_LOG_LEVEL    |                      | nginx 指定当触发 limit 时，日志打印级别            | error           |
+| NGINX_LIMIT_CONN_STATUS       |                      | nginx 设置回复被禁用的连接请求时的状态码           | 503             |
+| NGINX_LIMIT_RATE_AFTER        |                      | nginx 设置达到指定阀值后开始限速(字节)             | 300m            |
+| NGINX_LIMIT_RATE              |                      | nginx 限制向客户端传输数据的速度(Byte/s)           | 300k            |
+| NGINX_CLIENT_BODY_TIMEOUT     |                      | nginx 设置等待 client 发送一个包体的超时时间       | 60s             |
+| NGINX_CLIENT_HEADER_TIMEOUT   |                      | nginx 设置等待 client 发送一个包头的超时时间       | 60s             |
+| NGINX_KEEPALIVE_TIMEOUT       |                      | keep-alive 连接超时时间                            | 75s             |
 | NGINX_SEND_TIMEOUT            |                      | 服务端向客户端传输数据的超时时间                   | 60s             |
-| NGINX_SERVER_TOKENS           |                      | 隐藏nginx版本号                                    | off             |
-| NGINX_CLIENT_MAX_BODY_SIZE    |                      | nginx限制文件上传大小                              | 1m              |
-| NGINX_CLIENT_BODY_BUFFER_SIZE |                      | nginx限制缓冲区大小                                | 1m              |
+| NGINX_SERVER_TOKENS           |                      | 隐藏 nginx 版本号                                  | off             |
+| NGINX_CLIENT_MAX_BODY_SIZE    |                      | nginx 限制文件上传大小                             | 1m              |
+| NGINX_CLIENT_BODY_BUFFER_SIZE |                      | nginx 限制缓冲区大小                               | 1m              |
 
 如果`VITE_BACK_AUTH_BASE`和`VITE_BACK_API_BASE`以`http`开头，那么直接使用该值作为服务地址；否则，以当前页面访问地址为基础，如果指定了`XXX_PORT`，那么用指定的端口替换页面访问地址端口，之后添加`XXX_BASE`作为调用 AP 的起始地址。
 
