提供文档对象增删改操作的webhook

--- a/docs/插件机制.md
+++ b/docs/插件机制.md
@@ -262,12 +262,8 @@ function createPlugin(file) {
 module.exports = { createPlugin }
 ```
 
-# 前端使用
+# 预制插件
 
-`ue_comp/List.vue`
+系统提供了预制插件，详情见文档。
 
-| 属性          | 说明             | 补充                                                        |
-| ------------- | ---------------- | ----------------------------------------------------------- |
-| pluginsAside  | 适用全局右侧插件 | 插件配置 transData:more/nothing 或不进行配置                |
-| pluginsCenter | 适用单条数据     | 插件配置 transData:one；在什么条件下配置，可增配 visible:{} |
-| pluginsSub    | 适用全局顶栏插件 | 由 VUE_APP_PLUGINSUB_NAMES 环境变量控制                     |
+[预制插件](../packages/plugins/README.md)
