--- a/docs/环境变量.md
+++ b/docs/环境变量.md
@@ -42,6 +42,8 @@
 | TMS_REDIS_PORT                         |                                                                   |                            |
 | TMS_REDIS_PWD                          |                                                                   |                            |
 | TMS_REDIS_EXPIRESIN                    |                                                                   |                            |
+| **webhook**                            |                                                                   |                            |
+| TMW_APP_WEBHOOK                        | 指定的 webhook 回调地址。                                         |                            |
 
 # ue_admin
 
